# ecoli-sources

./: .gitignore  BUNDLES.md  CITATION.cff  README.md  datapackage.json  pyproject.toml
.github/workflows/: validate.yml
analysis/: compare_datasets.py  meta_analysis.py  refdata_tpm_to_model_expression.py
ecoli_sources/: __init__.py
ecoli_sources/data/: reference_bundle.tsv
ecoli_sources/data/rnaseq_experimental/: manifest.tsv
processing/: perturbations.py  post_processing.py
schemas/: README.md  __init__.py  adjustments.py  half_lives.py  parameters.py  reference_bundle.py  regulation.py  rnaseq.py  translation.py  validate.py
scripts/: campaign_summary.py  index.html  validate_all.py  validate_bundle.py
